@@ -6,5 +6,8 @@
 #include "sock.h"
 #include "soaplib.h"
 
+const char *ContentTypeHeader =
+    "CONTENT-TYPE: text/xml; charset=\"utf-8\"\r\n";
+
 #endif /* EXCLUDE_SOAP */
 
